--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>서비스 소개 - 꿈 분석기</title>
+    <title>서비스 소개 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav">
                 <li><a href="/index.html" class="navbar-link">홈</a></li>
             </ul>
@@ -20,10 +20,10 @@
     </nav>
 
     <div class="container-narrow" style="margin-top: 3rem;">
-        <h1 class="mb-md">꿈 분석기란?</h1>
+        <h1 class="mb-md">꿈 여행란?</h1>
         <div class="card" style="line-height: 1.8;">
             <p class="mb-sm"><strong>🌟 무의식의 세계로 떠나는 나침반</strong></p>
-            <p>꿈 분석기는 현대의 최첨단 인공지능(AI) 기술과 칼 융의 분석심리학을 융합하여 여러분이 밤새 꾸었던 꿈의 내면적 조언과 상징을 해석해 드리는 서비스입니다.</p>
+            <p>꿈 여행는 현대의 최첨단 인공지능(AI) 기술과 칼 융의 분석심리학을 융합하여 여러분이 밤새 꾸었던 꿈의 내면적 조언과 상징을 해석해 드리는 서비스입니다.</p>
 
             <h2 class="mt-md">우리 서비스의 특징</h2>
             <ul>
