--- a/public/auth.html
+++ b/public/auth.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인 / 회원가입 - 꿈 분석기</title>
+    <title>로그인 / 회원가입 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
     <div class="container-narrow" style="margin-top: 4rem;">
-        <h1 class="text-center mb-lg">🌙 꿈 분석기</h1>
+        <h1 class="text-center mb-lg">🌙 꿈 여행</h1>
 
         <!-- Tab Navigation -->
         <div style="display: flex; gap: 1rem; justify-content: center; margin-bottom: 2rem;">
