--- a/public/dream-journal.html
+++ b/public/dream-journal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>꿈 일지 - 꿈 분석기</title>
+    <title>꿈 일지 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="manifest" href="/manifest.json">
 </head>
@@ -12,11 +12,11 @@
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav" style="align-items: center;">
-                <li><a href="/dashboard.html" class="navbar-link">대시보드</a></li>
-                <li><a href="/dream-journal.html" class="navbar-link active">꿈 일지</a></li>
                 <li><a href="/community.html" class="navbar-link">게시판</a></li>
+                <li><a href="/dream-journal.html" class="navbar-link active">꿈 일지</a></li>
+                <li><a href="/dashboard.html" class="navbar-link">대시보드</a></li>
                 <li id="nav-auth-section">
                     <!-- Auth content injected via JS -->
                 </li>
