--- a/public/privacy.html
+++ b/public/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보처리방침 - 꿈 분석기</title>
+    <title>개인정보처리방침 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav">
                 <li><a href="/index.html" class="navbar-link">홈</a></li>
             </ul>
@@ -23,7 +23,7 @@
         <h1 class="mb-md">개인정보처리방침</h1>
         <div class="card" style="line-height: 1.8;">
             <h2>1. 수집하는 개인정보 항목</h2>
-            <p>꿈 분석기는 서비스 제공을 위해 아래와 같은 개인정보를 수집하고 있습니다.<br>
+            <p>꿈 여행는 서비스 제공을 위해 아래와 같은 개인정보를 수집하고 있습니다.<br>
                 - 필수항목: 이메일, 비밀번호, 닉네임<br>
                 - 선택항목: 성별, 생년월일</p>
 
