--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>대시보드 - 꿈 분석기</title>
+    <title>대시보드 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
-  <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav" style="align-items: center;">
-                <li><a href="/dashboard.html" class="navbar-link">대시보드</a></li>
-                <li><a href="/dream-journal.html" class="navbar-link">꿈 일지</a></li>
                 <li><a href="/community.html" class="navbar-link">게시판</a></li>
+                <li><a href="/dream-journal.html" class="navbar-link">꿈 일지</a></li>
+                <li><a href="/dashboard.html" class="navbar-link active">대시보드</a></li>
                 <li id="nav-auth-section"></li>
             </ul>
         </div>
