--- a/public/dream-input.html
+++ b/public/dream-input.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>새 꿈 기록 - 꿈 분석기</title>
+    <title>새 꿈 기록 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
-  <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav">
-                <li><a href="/dashboard.html" class="navbar-link">대시보드</a></li>
-                <li><a href="/dream-journal.html" class="navbar-link">꿈 일지</a></li>
                 <li><a href="/community.html" class="navbar-link">게시판</a></li>
+                <li><a href="/dream-journal.html" class="navbar-link">꿈 일지</a></li>
+                <li><a href="/dashboard.html" class="navbar-link">대시보드</a></li>
                 <li id="nav-auth-section"></li>
             </ul>
         </div>
@@ -114,7 +114,7 @@
         async function initPage() {
             if (isEditMode) {
                 // Edit Mode Setup
-                document.title = '꿈 수정 - 꿈 분석기';
+                document.title = '꿈 수정 - 꿈 여행';
                 pageTitle.textContent = '✏️ 꿈 내용 수정';
                 submitBtn.textContent = '💾 수정 완료';
 
