--- a/public/terms.html
+++ b/public/terms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이용약관 - 꿈 분석기</title>
+    <title>이용약관 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-content">
-            <a href="/index.html" class="navbar-brand">🌙 꿈 분석기</a>
+            <a href="/index.html" class="navbar-brand">🌙 꿈 여행</a>
             <ul class="navbar-nav">
                 <li><a href="/index.html" class="navbar-link">홈</a></li>
             </ul>
@@ -23,7 +23,7 @@
         <h1 class="mb-md">서비스 이용약관</h1>
         <div class="card" style="line-height: 1.8;">
             <h2>제 1장 총칙</h2>
-            <p>본 약관은 "꿈 분석기"가 제공하는 서비스의 이용조건 및 절차, 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+            <p>본 약관은 "꿈 여행"가 제공하는 서비스의 이용조건 및 절차, 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.</p>
 
             <h2 class="mt-md">제 2장 서비스 이용</h2>
             <p>서비스는 인공지능(AI)을 활용하여 사용자가 입력한 텍스트 기반으로 해석을 제공합니다. 이는 심리 상담이나 의료적 진단을 대체할 수 없으며, 참고용으로만 활용되어야 합니다.</p>
