Add Google AdSense integration (ads.txt, meta, and script tags)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="칼 융의 이론을 기반으로 한 꿈 분석 및 심리 상태 추적 플랫폼">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
+    <meta name="google-adsense-account" content="ca-pub-5730073345509405">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405" crossorigin="anonymous"></script>
 </head>
 
 <body>
