--- a/public/privacy.html
+++ b/public/privacy.html
@@ -7,6 +7,8 @@
     <title>개인정보처리방침 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
   <link rel="manifest" href="/manifest.json">
+    <meta name="google-adsense-account" content="ca-pub-5730073345509405">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405" crossorigin="anonymous"></script>
 </head>
 
 <body>
