--- a/public/community.html
+++ b/public/community.html
@@ -45,6 +45,8 @@
         }
     </style>
     <link rel="manifest" href="/manifest.json">
+    <meta name="google-adsense-account" content="ca-pub-5730073345509405">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405" crossorigin="anonymous"></script>
 </head>
 
 <body>
