--- a/public/community.html
+++ b/public/community.html
@@ -46,7 +46,8 @@
     </style>
     <link rel="manifest" href="/manifest.json">
     <meta name="google-adsense-account" content="ca-pub-5730073345509405">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -113,17 +114,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Global Footer -->
-    <footer
-        style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted);">
-        <div style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
-            <a href="/about.html" style="color: var(--color-text-secondary); text-decoration: none;">서비스 소개</a>
-            <a href="/terms.html" style="color: var(--color-text-secondary); text-decoration: none;">이용약관</a>
-            <a href="/privacy.html" style="color: var(--color-text-secondary); text-decoration: none;">개인정보 처리방침</a>
-        </div>
-        <p style="font-size: 0.9rem;">&copy; 2024 Dream Analyzer. All rights reserved.</p>
-    </footer>
 
     <div id="noticePostModal" class="modal hidden">
         <div class="modal-content">
@@ -229,9 +219,14 @@
 
                 if (data.dreams.length === 0) {
                     communityList.innerHTML = `
-                        <div class="card text-center" style="padding: 3rem;">
-                            <h3>📭 아직 공유된 꿈이 없습니다.</h3>
-                            <p class="text-muted">꿈 일지에서 내 꿈을 공개로 설정하여 첫 공유자가 되어보세요!</p>
+                        <div class="card text-center" style="padding: 3rem; background: var(--color-surface); border: 1px solid var(--glass-border);">
+                            <div style="font-size: 3.5rem; margin-bottom: 1rem;">📭</div>
+                            <h3 style="color: var(--color-accent); margin-bottom: 1rem;">아직 공유된 꿈이 없습니다</h3>
+                            <p class="text-muted" style="line-height: 1.6; margin-bottom: 1.5rem;">
+                                꿈 여행 커뮤니티는 융의 분석심리학을 기반으로 서로의 내면 세계를 탐구하고 성장을 돕는 공간입니다.<br>
+                                첫 번째 꿈을 기록하고 '공개'로 설정하여, 다른 여행자들과 무의식의 메시지를 나누어 보세요!
+                            </p>
+                            <a href="/dream-input.html" class="btn btn-primary">첫 꿈 기록하러 가기</a>
                         </div>
                     `;
                     return;
@@ -608,9 +603,13 @@
 
                 if (data.posts.length === 0) {
                     noticeList.innerHTML = `
-                        <div class="card text-center" style="padding: 3rem;">
-                            <h3>📭 아직 등록된 글이 없습니다.</h3>
-                            <p class="text-muted">첫 번째 글을 작성해보세요!</p>
+                        <div class="card text-center" style="padding: 3rem; background: var(--color-surface); border: 1px solid var(--glass-border);">
+                            <div style="font-size: 3.5rem; margin-bottom: 1rem;">📢</div>
+                            <h3 style="color: var(--color-accent); margin-bottom: 1rem;">아직 등록된 공지사항이 없습니다</h3>
+                            <p class="text-muted" style="line-height: 1.6;">
+                                꿈 여행 서비스의 새로운 기능 업데이트, 서버 점검 안내, 이벤트 등<br>
+                                다양한 소식이 이곳에 안전하게 보관 및 안내될 예정입니다.
+                            </p>
                         </div>
                     `;
                     return;
@@ -762,6 +761,18 @@
             }
         }
     </script>
+
+
+    <!-- Global Footer -->
+    <footer style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted); background: var(--color-surface);">
+        <div style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
+            <a href="/about.html" style="color: var(--color-text-secondary); text-decoration: none;">서비스 소개</a>
+            <a href="/contact.html" style="color: var(--color-text-secondary); text-decoration: none;">문의하기</a>
+            <a href="/terms.html" style="color: var(--color-text-secondary); text-decoration: none;">이용약관</a>
+            <a href="/privacy.html" style="color: var(--color-text-secondary); text-decoration: none;">개인정보처리방침</a>
+        </div>
+        <p style="font-size: 0.9rem;">&copy; 2026 꿈 여행. 칼 융의 분석심리학을 기반으로 합니다.</p>
+    </footer>
 </body>
 
 </html>
