--- a/public/contact.html
+++ b/public/contact.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이용약관 - 꿈 여행</title>
+    <title>문의하기 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
-  <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="google-adsense-account" content="ca-pub-5730073345509405">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,19 +23,20 @@
     </nav>
 
     <div class="container-narrow" style="margin-top: 3rem;">
-        <h1 class="mb-md">서비스 이용약관</h1>
+        <h1 class="mb-md">문의하기</h1>
         <div class="card" style="line-height: 1.8;">
-            <h2>제 1장 총칙</h2>
-            <p>본 약관은 "꿈 여행"가 제공하는 서비스의 이용조건 및 절차, 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+            <p class="mb-sm"><strong>서비스 이용 중 궁금하신 점이나 제안할 사항이 있으신가요?</strong></p>
+            <p>꿈 여행 서비스에 대한 문의, 제휴 제안, 오류 신고 등 모든 연락을 환영합니다.</p>
 
-            <h2 class="mt-md">제 2장 서비스 이용</h2>
-            <p>서비스는 인공지능(AI)을 활용하여 사용자가 입력한 텍스트 기반으로 해석을 제공합니다. 이는 심리 상담이나 의료적 진단을 대체할 수 없으며, 참고용으로만 활용되어야 합니다.</p>
+            <h2 class="mt-md" style="font-size: 1.2rem;">이메일 문의</h2>
+            <p>아래 이메일 주소로 연락 주시면 최대한 빠르게 답변해 드리겠습니다.</p>
+            <p style="font-weight: bold; color: var(--color-accent); font-size: 1.1rem; margin-top: 0.5rem;">
+                <a href="mailto:contact@dreamanalyzer.com"
+                    style="color: inherit; text-decoration: none;">contact@dreamanalyzer.com</a>
+            </p>
 
-            <h2 class="mt-md">제 3장 회원의 의무</h2>
-            <p>회원은 타인의 정보를 도용하거나 게시판에 불법적, 음란성, 폭력성 메시지를 게시하여서는 안 됩니다.</p>
-
-            <h2 class="mt-md">제 4장 면책 조항</h2>
-            <p>회사가 제공하는 꿈 해석의 정확성에 대해 회사는 법적 책임을 지지 않으며, 이를 활용한 결과는 전적으로 사용자의 판단에 따릅니다.</p>
+            <h2 class="mt-md" style="font-size: 1.2rem;">운영 시간</h2>
+            <p>평일: 오전 10시 - 오후 5시 (주말 및 공휴일 휴무)</p>
         </div>
     </div>
 
