--- a/public/index.html
+++ b/public/index.html
@@ -167,23 +167,6 @@
     </section>
   </div>
 
-  <!-- Footer -->
-  <footer
-    style="background: var(--color-surface); padding: 2rem; text-align: center; margin-top: 4rem; border-top: 1px solid var(--glass-border);">
-    <p class="text-muted">© 2026 꿈 여행. 칼 융의 분석심리학을 기반으로 합니다.</p>
-  </footer>
-
-  <!-- Global Footer -->
-  <footer
-    style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted);">
-    <div style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
-      <a href="/about.html" style="color: var(--color-text-secondary); text-decoration: none;">서비스 소개</a>
-      <a href="/terms.html" style="color: var(--color-text-secondary); text-decoration: none;">이용약관</a>
-      <a href="/privacy.html" style="color: var(--color-text-secondary); text-decoration: none;">개인정보 처리방침</a>
-    </div>
-    <p style="font-size: 0.9rem;">&copy; 2024 Dream Analyzer. All rights reserved.</p>
-  </footer>
-
   <script src="/js/app.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -256,6 +239,18 @@
       document.getElementById('guestAnalysisSection').style.display = 'block';
     }
   </script>
+
+
+    <!-- Global Footer -->
+    <footer style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted); background: var(--color-surface);">
+        <div style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
+            <a href="/about.html" style="color: var(--color-text-secondary); text-decoration: none;">서비스 소개</a>
+            <a href="/contact.html" style="color: var(--color-text-secondary); text-decoration: none;">문의하기</a>
+            <a href="/terms.html" style="color: var(--color-text-secondary); text-decoration: none;">이용약관</a>
+            <a href="/privacy.html" style="color: var(--color-text-secondary); text-decoration: none;">개인정보처리방침</a>
+        </div>
+        <p style="font-size: 0.9rem;">&copy; 2026 꿈 여행. 칼 융의 분석심리학을 기반으로 합니다.</p>
+    </footer>
 </body>
 
 </html>
