chore: remove google adsense from functional pages

--- a/public/contact.html
+++ b/public/contact.html
@@ -7,9 +7,6 @@
     <title>문의하기 - 꿈 여행</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="manifest" href="/manifest.json">
-    <meta name="google-adsense-account" content="ca-pub-5730073345509405">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5730073345509405"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -42,7 +39,8 @@
 
 
     <!-- Global Footer -->
-    <footer style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted); background: var(--color-surface);">
+    <footer
+        style="margin-top: 4rem; padding: 2rem; border-top: 1px solid var(--glass-border); text-align: center; color: var(--color-text-muted); background: var(--color-surface);">
         <div style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
             <a href="/about.html" style="color: var(--color-text-secondary); text-decoration: none;">서비스 소개</a>
             <a href="/contact.html" style="color: var(--color-text-secondary); text-decoration: none;">문의하기</a>
